@@ -27,15 +27,41 @@ namespace bt = boost::posix_time;
 
 const std::locale formats[] = {
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%m-%d %H:%M:%S%f")),
-    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%m%d %H%M%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y/%m/%d %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%m%d %H%M%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%m/%d/%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%m-%d-%Y %H:%M:%S%f")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%d.%m.%Y %H:%M:%S%f")),
+
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%b-%d %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y/%b/%d %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%b%d %H%M%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%b/%d/%Y %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%b-%d-%Y %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%d.%b.%Y %H:%M:%S%f")),
+
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%%B-%d %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y/%%B/%d %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%%B%d %H%M%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%%B/%d/%Y %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%%B-%d-%Y %H:%M:%S%f")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%d.%%B.%Y %H:%M:%S%f")),
+
     std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%m-%d")),
     // will not work std::locale(std::locale::classic(), new bt::time_input_facet("%Y%m%d")),
     std::locale(std::locale::classic(), new bt::time_input_facet("%m/%d/%Y")),
-    std::locale(std::locale::classic(), new bt::time_input_facet("%m-%d-%Y"))
+    std::locale(std::locale::classic(), new bt::time_input_facet("%m-%d-%Y")),
+
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%b-%d")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%b%d")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%b/%d/%Y")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%b-%d-%Y")),
+
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y-%B-%d")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%Y%B%d")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%B/%d/%Y")),
+    std::locale(std::locale::classic(), new bt::time_input_facet("%B-%d-%Y"))
+
 };
 const size_t nformats = sizeof(formats)/sizeof(formats[0]);
 
